--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is what you guys need to start your demo... pull/clone this and start working ur magic on it.
+all the gems u will need to install are in the gem file
+the scriptfile and model file are just a reference to what is in the model use it ONLY AS A REFERENCE
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
